--- a/cloud-modules/queues.Tests/queues.Tests.csproj
+++ b/cloud-modules/queues.Tests/queues.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\queues\queues.csproj" />
+  </ItemGroup>
+
 </Project>
