--- a/cloud-modules/queues.Tests/queues.Tests.csproj
+++ b/cloud-modules/queues.Tests/queues.Tests.csproj
@@ -6,10 +6,13 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Testcontainers.LocalStack" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +26,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\queues\queues.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="localstack\provisioning\init.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="localstack\provisioning\scripts\test-q.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
