--- a/cloud-modules/queues/queues.csproj
+++ b/cloud-modules/queues/queues.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.107" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.102.5" />
     <PackageReference Include="Lombok.NET" Version="2.1.1" />
   </ItemGroup>
