--- a/cloud-modules/queues.Tests/queues.Tests.csproj
+++ b/cloud-modules/queues.Tests/queues.Tests.csproj
@@ -32,7 +32,13 @@
     <None Update="localstack\provisioning\init.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="localstack\provisioning\scripts\test-b.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="localstack\provisioning\scripts\test-q.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="localstack\provisioning\scripts\test-transconsumer.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
