--- a/bridge-data/pocconsumer/pocconsumer.csproj
+++ b/bridge-data/pocconsumer/pocconsumer.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.107" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.102.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
