--- a/bridge-data/pocconsumer/pocconsumer.csproj
+++ b/bridge-data/pocconsumer/pocconsumer.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.107" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.102.5" />
+    <PackageReference Include="MassTransit.AmazonSQS" Version="8.2.2" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.308.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
