--- a/bridge-data/pocconsumer/pocconsumer.csproj
+++ b/bridge-data/pocconsumer/pocconsumer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.AmazonSQS" Version="8.2.2" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.308.6" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
