--- a/bridge-data/pocconsumer/pocconsumer.csproj
+++ b/bridge-data/pocconsumer/pocconsumer.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="MassTransit.AmazonSQS" Version="8.2.2" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.308.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
