--- a/bridge-data/bdc/BridgeDataConsumer.Console.csproj
+++ b/bridge-data/bdc/BridgeDataConsumer.Console.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit.AmazonSQS" Version="8.2.2" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.308.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
