--- a/bridge-data/bdc/appsettings.json
+++ b/bridge-data/bdc/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "AWS": {
-    "Profile": "default",
-    "Region": "us-east-2",
-    "S3": {
-      "ServiceURL": "http://localstack:4566",
-      "ForcePathStyle": true
-    }
+  "ConsumptionSources":{
+    "Bucket":"my-bucket-000",
+    "Queue":"my-queue"
+  },
+  "AWS":{
+    "Profile":"default",
+    "Region":"us-east-2"
   }
 }
