--- a/bridge-data/bdc/appsettings.json
+++ b/bridge-data/bdc/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConsumptionSources":{
-    "Bucket":"my-bucket-000",
-    "Queue":"my-queue"
+    "BucketName":"my-bucket-000",
+    "QueueName":"my-queue"
   },
   "AWS":{
     "Profile":"default",
