--- a/bridge-data/bdc/appsettings.json
+++ b/bridge-data/bdc/appsettings.json
@@ -1,8 +1,17 @@
 {
   "ConsumptionSources":{
     "BucketName":"my-bucket-000",
-    "QueueName":"my-queue"
+    "QueueName":"my-queue",
+    "DeferredQueryDirs": ["/dbbin/pending"],
+    "NonRestrictedDirs": ["/path/to/dir2"]
   },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "AWS":{
     "Profile":"default",
     "Region":"us-east-2"
