--- a/bridge-data/bdc/appsettings.json
+++ b/bridge-data/bdc/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConsumptionSources":{
+  "ConsumptionProperties":{
     "BucketName":"my-bucket-000",
     "QueueName":"my-queue",
     "DeferredQueryDirs": ["/dbbin/pending"],
